# martini-py

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
alembic/: env.py
iac/: Dockerfile  docker-entrypoint.sh  start
iac/celery/: Dockerfile
iac/celery/beat/: start.sh
iac/celery/flower/: start.sh
iac/celery/worker/: start.sh
iac/django/: Dockerfile  Dockerfile.nginx  nginx.conf  start.sh
iac/local/fastapi/: Dockerfile  entrypoint
iac/local/fastapi/celery/flower/: start
iac/local/fastapi/celery/worker/: start
iac/scripts/: docker-celery_beat.sh  docker-celery_flower.sh  docker-celery_worker.sh  docker-clean.sh  docker-down.sh  docker-logs.sh  docker-postgres.sh  docker-prod.sh  docker-qdrant.sh  docker-redis.sh  docker-reset.sh  docker-up.sh  docker-web.sh  docker-web_nginx.sh  manage.sh  scripts.py
martini/: __init__.py  celery.py  celery_utils.py  celerybeat-schedule.db  config.py  database.py  start-app.sh  stores.py
martini/apps/chats/: apps.py  llm.py  views.py
martini/apps/documents/: admin.py  exceptions.py  models.py  qdrant.py  serializers.py  tasks.py  urls.py  views.py
martini/apps/documents/migrations/: 0001_initial.py  0002_documentcollection_unstructureddocument_collection.py  0003_create_default_documentcollection.py  0004_unstructureddocument_has_embeddings_and_more.py
martini/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
martini/config/management/commands/: clear_static.py
martini/pdf/: __init__.py  models.py  tasks.py  views.py
martini/ws/: __init__.py  views.py
