[tool.poetry]
name = "martini"
version = "0.1.0"
description = ""
authors = ["Davy Peter Braun <davy.braun@ginetta.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.194"
tiktoken = "^0.4.0"
pypdf = "^3.9.1"
pinecone-client = "^2.2.2"
openai = "^0.27.8"
django = "^4.2.2"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
celery = "^5.3.0"
redis = "^4.5.5"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
flower = "^1.2.0"
uvicorn = "^0.22.0"

[tool.poetry.scripts]
docker-reset = "iac.scripts.scripts:reset"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
