[tool.poetry]
name = "martini"
version = "0.1.0"
description = ""
authors = ["Davy Peter Braun <davy.braun@ginetta.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.0.194"
tiktoken = "^0.4.0"
pypdf = "^3.9.1"
pinecone-client = "^2.2.2"
openai = "^0.27.8"
django = "^4.2.2"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
celery = "^5.3.0"
redis = "^4.5.5"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
flower = "^1.2.0"
uvicorn = "^0.22.0"
qdrant-client = "^1.2.0"
drf-yasg = "^1.21.6"

[tool.poetry.scripts]
manage = "iac.scripts.scripts:manage"   # must be run in the "martini" directory (where manage.py is located)
start-app = "iac.scripts.scripts:start_app"   # must be run in the "martini" directory (where manage.py is located)
docker-reset = "iac.scripts.scripts:docker_reset"
docker-down = "iac.scripts.scripts:docker_down"
docker-up = "iac.scripts.scripts:docker_up"
docker-logs = "iac.scripts.scripts:docker_logs"
docker-web = "iac.scripts.scripts:docker_web"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
