[tool.poetry]
name = "martini"
version = "0.1.0"
description = ""
authors = ["Davy Peter Braun <davy.braun@ginetta.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.0.213"
tiktoken = "^0.4.0"
pinecone-client = "^2.2.2"
openai = "^0.27.8"
django = "^4.2.2"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
celery = "^5.3.0"
redis = "^4.5.5"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
flower = "^1.2.0"
uvicorn = "^0.22.0"
qdrant-client = "^1.2.0"
drf-yasg = "^1.21.6"
bs4 = "^0.0.1"
pdfminer-six = "^20221105"

[tool.poetry.scripts]
manage = "iac.scripts.scripts:manage"   # must be run in the "martini" directory (where manage.py is located)
startapp = "iac.scripts.scripts:startapp"   # must be run in the "martini" directory (where manage.py is located)
docker-prod = "iac.scripts.scripts:docker_prod"
docker-reset = "iac.scripts.scripts:docker_reset"
docker-clean = "iac.scripts.scripts:docker_clean"
docker-down = "iac.scripts.scripts:docker_down"
docker-up = "iac.scripts.scripts:docker_up"
docker-logs = "iac.scripts.scripts:docker_logs"
docker-web = "iac.scripts.scripts:docker_web"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
